--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,6 +1,9 @@
 name: cron
 
-on: [push]
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 8 * * *'
 
 jobs:
   cron:
@@ -28,3 +31,8 @@ jobs:
       if: github.ref == 'refs/heads/main'
       run: |
         git status
+        git config --global user.email "actions@github.com"
+        git config --global user.name "Actions CI"
+        git add -A
+        git diff-index --quiet HEAD || git commit -m "Automatic update"
+        git push
