--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -10,10 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+    - uses: actions/setup-node@v2
     - name: Run npm steps
       run: |
         cd ..
